...
            "state": "translated",
            "value": "相簿"
          }
        }
      }
    },
    "Albums": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "الألبومات"
          }
...
            "state": "translated",
            "value": "正在連線..."
          }
        }
      }
    },
    "Continue watching": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "تابع المشاهدة"
          }
...
            "state": "translated",
            "value": "媒體"
          }
        }
      }
    },
    "Movies": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "أفلام"
          }
...
            "state": "translated",
            "value": "音樂"
          }
        }
      }
    },
    "My List": {
      "localizations": {
        "ar": {
          "stringUnit": {
            "state": "translated",
            "value": "قائمتي"
          }
...
